# teax

./: .claudeignore  .csc  .gitattributes  .gitignore  .tmux-session  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  justfile  plan.md  pyproject.toml
.claude/: settings.local.json
.claude/rules/: development.md  testing.md
.gitea/workflows/: ci.yml  publish.yml
.github/workflows/: ci.yml
archive/: plan-20260115-1123.md
docs/: ISSUES.md  README.md  api.md  architecture.md  usage.md
docs/adr/: ADR-0006-teax-design.md  ADR-0007-gitea-actions-support.md  ADR-0008-package-management.md  ADR-0009-secrets-variables-management.md  ADR-0010-workflow-runs-agent-support.md  README.md
scripts/: ci-status.sh
src/teax/: __init__.py  api.py  cli.py  config.py  models.py
tests/: __init__.py  test_api.py  test_cli.py  test_config.py
