[project]
name = "teax"
version = "0.6.1"
description = "Gitea CLI companion for tea feature gaps"
authors = [
    {name = "Simon Inglis", email = "simon@inglis.id.au"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["gitea", "cli", "tea", "issue-tracking", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]

dependencies = [
    "click>=8.3.1,<9.0.0",
    "httpx>=0.28.1,<0.29.0",
    "pyyaml>=6.0.3,<7.0.0",
    "rich>=14.2.0,<15.0.0",
    "pydantic>=2.12.5,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/simoninglis/teax"
Repository = "https://github.com/simoninglis/teax"
Issues = "https://github.com/simoninglis/teax/issues"

[project.scripts]
teax = "teax.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "teax", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
ruff = "^0.14.11"
mypy = "^1.19.1"
types-pyyaml = "^6.0.12.20250915"
respx = "^0.22.0"

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=teax --cov-report=term-missing"

[tool.coverage.run]
source = ["src/teax"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
